# libroyale-python-wrapper

./: CMakeLists.txt  CustomAPI.i  README.md  royale_test.py  setup.py  test.sh
attempt_2/: royale_c_wrapper.cxx  royale_c_wrapper.h  royale_wrapper.py  royale_wrapper_test.py  test.sh
attempt_3/: CMakeLists.txt  CustomAPI.i  get_python_root_dir.py  royale.i  royale_test.py  setup.py  test.sh
cmake/: FindPython.cmake
royale_wrapper/: main.py  profile.py  test.py
src/: CustomAPI.i  royale.i
